fixed top/bottom screen clipping on mobile

--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -9,6 +9,7 @@ main {
 
 @media screen and (max-width: 1000px) {
   main {
+    height: 100%;
     flex-direction: column;
     text-align: center;
   }
